# quine

./: .dockerignore  .gitignore  0rfoh1hdcqkdojvjsuqpejd12cvharel.darc  CLAUDE.md  Dockerfile  docker-compose.yml  manifest  nu6drmtpsfjlr9fadkkmqvglk50qnjbm  oib1ssrhmknhnk0pekk3cdesgptndqbs.darc
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/output-styles/: options-comparison.md
.claude/plans/quine-roc-port/: PLAN.md  PRD.md  README.md  ROADMAP.md  SPEC.md  index.md
.claude/plans/quine-roc-port/docs/: book.toml
.claude/plans/quine-roc-port/phase/: 000-codebase-analysis.md  001-graph-node-model.md  002-persistence.md  003a-custom-roc-platform.md  003c-wire-graph-to-platform.md  004a-standing-queries-ast-state-index.md  (+3 more)
app/: graph-app.roc  hello-platform.roc  integration-test-graph.roc  json-smoke.roc  main.roc  phase-2-smoke.roc  phase-4-smoke.roc  platform-test-backpressure.roc  platform-test-echo.roc
docs/: roc-quirks.md
docs/src/diagrams/: seq-cypher-query.html  seq-ingest.html  seq-standing-query.html
docs/superpowers/specs/: 2026-04-22-cypher-query-planner-design.md
platform/: Cargo.toml  Effect.roc  Host.roc  build.rs  main.roc
platform/src/: channels.rs  codec.rs  config.rs  effects.rs  ingest.rs  main.rs  persistence_io.rs  quine_id.rs  roc_glue.rs  shard_worker.rs  timer.rs  watch_dir.rs
platform/src/api/: health.rs  ingest.rs  mod.rs  nodes.rs  query.rs  standing_queries.rs  tests.rs
platform/src/cypher/: eval.rs  executor.rs  expr.rs  mod.rs  plan.rs
test-data/: test-events.jsonl
tests/e2e/: restart-test.sh  run.sh
(+54 files in other folders)
