[package]
name = "quine-graph-platform"
version = "0.1.0"
edition = "2021"
links = "app"

[dependencies]
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt", "time", "net", "macros", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
libc = "0.2"
roc_std = { git = "https://github.com/roc-lang/roc.git", rev = "d73ea109cc2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
redb = "2"
notify = "7"

[dev-dependencies]
tempfile = "3.27.0"
